--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,100 +1,5 @@
-/* HEADER */
-
-.header{
-    background-color: gray;
-    /*background-image: url("../rsc/blue background.jpg");*/
-    color: white;
-    padding-top: 2em;
-    padding-bottom: 2em;
-}
-
-.header-t{
-    width: 90%;
-    margin: 0 auto;
-}
-
-.header-in{
-    padding: 1em;
-    text-align: center;
-}
-
-.header-in h1{
-    color: white;
-    font-size: 42px;
-}
-
-.header-button{
-    padding: 0;
-    border-radius: 0;
-    padding: 0;
-    margin-top: 2em;
-}
-
-.header-list{
-    text-align: center;
-}
-
-.header-list li{
-    margin: 0 2em;
-    font-family: 'Ubuntu';
-    /*background-color: #3adb76;*/
-    background-color: black;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-    cursor: pointer;
-    color: white;
-    width: 15%;
-    text-align: center;
-    font-size: 22px;
-    font-weight: bold;
-}
-
-.header-list li:hover{
-    /*background-color: #4981F6;*/
-    /*background-color: gray;*/
-}
-
-@media (max-width: 768px){
-    .header{
-        padding-top: 0.2em;
-        padding-bottom: 0.2em;
-        font-size: 13px;
-    }
-
-    .header-in{
-        font-size: 10px;
-    }
-
-    .header-list li{
-        width: 60%;
-        margin: 0 0.5em;
-        font-size: 13px;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 992px){
-    .header{
-        padding-top: 0.2em;
-        padding-bottom: 0.2em;
-        font-size: 13px;
-    }
-
-    .header-in{
-        font-size: 10px;
-    }
-
-    .header-list li{
-        width: 20%;
-        margin: 0 0.5em;
-        font-size: 16px;
-    }
-
-}
-
-/* HEADER */
-
-
 /* CONTENIDO */
+
 .contenido{
     width: 90%;
     overflow: hidden;
@@ -104,76 +9,6 @@
 
 .contenido-in{
 }
-
-.slider-fre,
-.slider-pay{
-    height: 100%;
-}
-
-.slider-free-nocommerce,
-.slider-free-commerce,
-.slider-pay-commerce{
-    width: 100%;
-    margin-top: 3em;
-}
-
-#title{
-    margin-bottom: 0;
-}
-
-#subtitle{
-    font-size: 32px;
-}
-
-.slide-images{
-    float: left;
-    width: 50%;
-    margin-bottom: 3.5em;
-}
-
-.slide-images img{
-    margin-top: 1em;
-    box-shadow: 14px 14px 20px #999;
-    width: 70%;
-    max-height: 300px;
-}
-
-#ultimo{
-    width: 100%;
-    float: none;
-}
-
-#ultimo img{
-    width: 38%;
-}
-
-.slide-images p{
-    font-size: 26px;
-    font-weight: bold;
-    margin: 0;
-}
-
-@media screen and (max-width: 768px){
-    .slide-images{
-        float: none;
-        margin: 0 auto;
-        width: 100%;
-        margin-bottom: 3em;
-    }
-
-    .slide-images img{
-        width: 85%;
-    }
-
-    #ultimo img{
-        width: 85%;
-    }
-    
-    .slide-image p{
-        font-size: 18px;
-    }
-}
-
 
 /* CONTENIDO */
 
@@ -282,4 +117,4 @@ a.footer-services-list {
 
 }
 
-/* FOOTER */
+/* FOOTER 
