--- a/public/css/recientes.css
+++ b/public/css/recientes.css
@@ -33,22 +33,19 @@
 }
 
 .header-list li{
-    margin: 0 2em;
     font-family: 'Ubuntu';
-    /*background-color: #3adb76;*/
     background-color: black;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-    cursor: pointer;
     color: white;
-    width: 15%;
-    text-align: center;
-    font-size: 22px;
+    margin: 0 1.5em;
+    padding: 0.5em 0.7em;
+    width: 150px;
+    font-size: 24px;
+    display: inline-block;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .header-list li:hover{
-    /*background-color: #4981F6;*/
     /*background-color: gray;*/
 }
 
