--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,13 +1,102 @@
+/* HEADER */
+
+.header{
+    background-color: gray;
+    /*background-image: url("../rsc/blue background.jpg");*/
+    color: white;
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+.header-t{
+    width: 90%;
+    margin: 0 auto;
+}
+
+.header-in{
+    padding: 1em;
+    text-align: center;
+}
+
+.header-in h1{
+    color: white;
+    font-size: 42px;
+}
+
+.header-button{
+    padding: 0;
+    border-radius: 0;
+    padding: 0;
+    margin-top: 2em;
+}
+
+.header-list{
+    text-align: center;
+}
+
+.header-list li{
+    font-family: 'Ubuntu';
+    background-color: black;
+    color: white;
+    margin: 0 1.5em;
+    padding: 0.5em 0.7em;
+    width: 150px;
+    font-size: 24px;
+    display: inline-block;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.header-list li:hover{
+    /*background-color: gray;*/
+}
+
+@media (max-width: 768px){
+    .header{
+        padding-top: 0.2em;
+        padding-bottom: 0.2em;
+        font-size: 13px;
+    }
+
+    .header-in{
+        font-size: 10px;
+    }
+
+    .header-list li{
+        width: 60%;
+        margin: 0 0.5em;
+        font-size: 13px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 992px){
+    .header{
+        padding-top: 0.2em;
+        padding-bottom: 0.2em;
+        font-size: 13px;
+    }
+
+    .header-in{
+        font-size: 10px;
+    }
+
+    .header-list li{
+        width: 20%;
+        margin: 0 0.5em;
+        font-size: 16px;
+    }
+
+}
+
+/* HEADER*/
+
 /* CONTENIDO */
 
 .contenido{
     width: 90%;
     overflow: hidden;
     margin: 0 auto;
-    text-align: center;
-}
-
-.contenido-in{
+    /*text-align: center;*/
 }
 
 /* CONTENIDO */
