--- a/public/css/login.css
+++ b/public/css/login.css
@@ -12,6 +12,7 @@
 /* INDEX */
 
 .envoltura{
+    text-align: center;
     width: 40%;
     margin: 0 auto;
     box-shadow: 3px 3px 10px 5px rgba(0,0,0,.8);
